Fix fixtures.ts output file, add scrollbars in output file viewer

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -145,9 +145,9 @@
   @apply relative w-full h-full overflow-hidden;
 }
 
-.syntax-highlighter-container > * {
+/* .syntax-highlighter-container > * {
   @apply w-full h-full overflow-auto;
-}
+} */
 
 /* Monaco Editor Overrides */
 .monaco-editor .margin,
